<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_colour"
    >

    <ImageView
        android:id="@+id/topLeftLogo"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="343dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/addProductTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whitelogo" />

    <TextView
        android:id="@+id/addProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/add_product_title"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/productTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/productTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="364dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/titleInputForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/conditionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="323dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/product_condition"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/conditionInputForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="251dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/product_desc"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/productDescForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/titleInputForm"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/border_form"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/conditionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/conditionInputForm"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/border_form"
        android:ems="10"
        android:hint="@string/condition_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addImageTitle"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="307dp"
        android:fontFamily="@font/montserrat_bold"
        android:paddingLeft="10dp"
        android:text="@string/add_image"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/productDescForm"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/border_form"
        android:ems="10"
        android:hint="@string/desc_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/addImageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="97dp"
        android:background="@drawable/border_button"
        android:drawableStart="@drawable/upload1"
        android:hint="@string/add_image"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>