<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_colour"
    >

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameForm"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_form"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/border_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/submit_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_form"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logoTopLeft"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="343dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whitelogo" />
</androidx.constraintlayout.widget.ConstraintLayout>