<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_colour"
    >

    <ImageView
        android:id="@+id/freebayLogo"
        android:layout_width="85dp"
        android:layout_height="90dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/freebayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        app:srcCompat="@drawable/whitelogo" />

    <TextView
        android:id="@+id/freebayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="364dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_logo_name"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/createBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/custom_form"
        android:fontFamily="@font/montserrat"
        android:text="@string/create_account_btn"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/have_account_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="73dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_text_button"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBtn"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>